// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NodeVisualization rendered structure bonded-lldp, with neighbours shown 1`] = `
{
  "edges": [
    "200,180 -> 260,180  solid  lldp",
    "200,280 -> 260,280  solid  lldp",
    "200,380 -> 260,380  solid  lldp",
    "200,480 -> 260,480  solid  lldp",
    "200,580 -> 260,580  solid  lldp",
    "200,80 -> 260,80  solid  lldp",
    "420,180 -> 480,130  solid  controller",
    "420,280 -> 480,330  solid  controller",
    "420,380 -> 480,330  solid  controller",
    "420,480 -> 480,530  solid  controller",
    "420,580 -> 480,530  solid  controller",
    "420,80 -> 480,130  solid  controller",
    "640,130 -> 700,130  solid  controller",
    "640,330 -> 700,330  solid  controller",
    "860,130 -> 920,130  dashed  bridge-mapping",
    "860,330 -> 920,1030  dashed  bridge-mapping",
    "860,330 -> 920,1130  dashed  bridge-mapping",
    "860,330 -> 920,1230  dashed  bridge-mapping",
    "860,330 -> 920,1330  dashed  bridge-mapping",
    "860,330 -> 920,1430  dashed  bridge-mapping",
    "860,330 -> 920,1530  dashed  bridge-mapping",
    "860,330 -> 920,1630  dashed  bridge-mapping",
    "860,330 -> 920,1730  dashed  bridge-mapping",
    "860,330 -> 920,1830  dashed  bridge-mapping",
    "860,330 -> 920,1930  dashed  bridge-mapping",
    "860,330 -> 920,2030  dashed  bridge-mapping",
    "860,330 -> 920,2130  dashed  bridge-mapping",
    "860,330 -> 920,2230  dashed  bridge-mapping",
    "860,330 -> 920,2330  dashed  bridge-mapping",
    "860,330 -> 920,2430  dashed  bridge-mapping",
    "860,330 -> 920,2530  dashed  bridge-mapping",
    "860,330 -> 920,2630  dashed  bridge-mapping",
    "860,330 -> 920,2730  dashed  bridge-mapping",
    "860,330 -> 920,2830  dashed  bridge-mapping",
    "860,330 -> 920,2930  dashed  bridge-mapping",
    "860,330 -> 920,330  dashed  bridge-mapping",
    "860,330 -> 920,430  dashed  bridge-mapping",
    "860,330 -> 920,530  dashed  bridge-mapping",
    "860,330 -> 920,630  dashed  bridge-mapping",
    "860,330 -> 920,730  dashed  bridge-mapping",
    "860,330 -> 920,830  dashed  bridge-mapping",
    "860,330 -> 920,930  dashed  bridge-mapping",
    "arc M 860 130 Q 905 300 860 470  solid  patch-peer",
    "arc M 860 330 Q 905 400 860 470  solid  patch-peer",
  ],
  "laneHeaders": [
    "LLDP Neighbors",
    "Physical Interfaces",
    "Bonds",
    "Bridges",
    "Integration",
    "Bridge Mappings",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f0np0",
        "ethernet",
        "up",
      ],
      "title": "ens5f0np0 (ethernet)",
      "x": 260,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f1np1",
        "ethernet",
        "up",
      ],
      "title": "ens2f1np1 (ethernet)",
      "x": 260,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f1np1",
        "ethernet",
        "up",
      ],
      "title": "ens5f1np1 (ethernet)",
      "x": 260,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f0np0",
        "ethernet",
        "up",
      ],
      "title": "ens2f0np0 (ethernet)",
      "x": 260,
      "y": 40,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f2np2",
        "ethernet",
        "up",
      ],
      "title": "ens2f2np2 (ethernet)",
      "x": 260,
      "y": 440,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f2np2",
        "ethernet",
        "up",
      ],
      "title": "ens5f2np2 (ethernet)",
      "x": 260,
      "y": 540,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f3np3",
        "ethernet",
        "down",
      ],
      "title": "ens2f3np3 (ethernet)",
      "x": 260,
      "y": 640,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f3np3",
        "ethernet",
        "down",
      ],
      "title": "ens5f3np3 (ethernet)",
      "x": 260,
      "y": 740,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f0np0 · Port: Eth1/22",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f1np1 · Port: Eth1/23",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f1np1 · Port: Eth1/23",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f0np0 · Port: Eth1/22",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f2np2 · Port: Eth1/24",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 440,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f2np2 · Port: Eth1/24",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 540,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond1",
        "bond",
        "up",
      ],
      "title": "bond1 (bond)",
      "x": 480,
      "y": 290,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond2",
        "bond",
        "up",
      ],
      "title": "bond2 (bond)",
      "x": 480,
      "y": 490,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond0",
        "bond",
        "up",
      ],
      "title": "bond0 (bond)",
      "x": 480,
      "y": 90,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "ovs-vm",
        "ovs-bridge",
        "up",
      ],
      "title": "ovs-vm (ovs-bridge)",
      "x": 700,
      "y": 290,
    },
    {
      "fill": "#009596",
      "labels": [
        "br-int",
        "OVN Integration",
        "8 ports",
      ],
      "title": "br-int (OVN Integration)",
      "x": 700,
      "y": 430,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 700,
      "y": 90,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 1090,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1190,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 1290,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-app-processing",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-app-processing (OVN Bridge Mapping)",
      "x": 920,
      "y": 1390,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 1490,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-primary-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-primary-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1590,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-reporting-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-reporting-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1690,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 1790,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1890,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 1990,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-e-desktop04",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-e-desktop04 (OVN Bridge Mapping)",
      "x": 920,
      "y": 2090,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-business",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-business (OVN Bridge Mapping)",
      "x": 920,
      "y": 2190,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-clearing",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-clearing (OVN Bridge Mapping)",
      "x": 920,
      "y": 2290,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 2390,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg058-two",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg058-two (OVN Bridge Mapping)",
      "x": 920,
      "y": 2490,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg143-three",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg143-three (OVN Bridge Mapping)",
      "x": 920,
      "y": 2590,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg151",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg151 (OVN Bridge Mapping)",
      "x": 920,
      "y": 2690,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-h-vis-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-h-vis-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 2790,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-h-vis-viewer",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-h-vis-viewer (OVN Bridge Mapping)",
      "x": 920,
      "y": 2890,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 290,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-mon",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-mon (OVN Bridge Mapping)",
      "x": 920,
      "y": 390,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-prov",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-prov (OVN Bridge Mapping)",
      "x": 920,
      "y": 490,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-sec",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-sec (OVN Bridge Mapping)",
      "x": 920,
      "y": 590,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-sys",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-sys (OVN Bridge Mapping)",
      "x": 920,
      "y": 690,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-uc",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-uc (OVN Bridge Mapping)",
      "x": 920,
      "y": 790,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 890,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 920,
      "y": 90,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-a-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-a-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 990,
    },
  ],
}
`;

exports[`NodeVisualization rendered structure drawer content for br-ex (ovs-bridge) 1`] = `
{
  "Overview": "br-exovs-bridgeOverviewRelationshipsConfigTypeovs-bridgeStateupPortsbr-exens192patch-br-ex_cluster_udn_example.p.cudn_worker-1-to-br-intpatch-br-ex_worker-1-to-br-int",
  "Relationships": "br-exovs-bridgeOverviewRelationshipsConfigUpstreamens192 · controller (membership)Downstreamphysnet · bridge-mapping (reference)br-int · patch-peer (peer)",
}
`;

exports[`NodeVisualization rendered structure drawer content for ens192 (ethernet) 1`] = `
{
  "Overview": "ens192ethernetOverviewRelationshipsConfigTypeethernetStateupMAC Address02:00:00:00:00:01MTU1500",
  "Relationships": "ens192ethernetOverviewRelationshipsConfigDownstreambr-ex · controller (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for example-p-cudn (VRF) 1`] = `
{
  "Overview": "example-p-cudnVRF InterfaceOverviewRelationshipsConfigTypeVRF InterfaceServes Primary Networkinferredexample-p-cudn (ClusterUserDefinedNetwork)MAC Address02:00:00:00:00:06Route Table5775Routes0.0.0.0/0 via 192.0.2.1 dev br-ex169.254.0.3/32 via 10.1.2.1 dev ovn-k8s-mp3169.254.0.16/32 via 0.0.0.0 dev ovn-k8s-mp3172.30.0.0/16 via 169.254.0.4 dev br-exbr-int Portsinferredovn-k8s-mp3 10.1.2.2/24",
  "Relationships": "example-p-cudnVRF InterfaceOverviewRelationshipsConfigUpstreambr-int · management-port (ovn-k8s-mp3) (membership)Downstreamexample-p-cudn · primary-network (subnet, name) (reference)",
}
`;

exports[`NodeVisualization rendered structure drawer content for machinenet (CUDN) 1`] = `
{
  "Overview": "machinenetLocalnet ClusterUserDefinedNetworkOverviewRelationshipsConfigTypeClusterUserDefinedNetworkTopologyLocalnetRoleSecondaryPhysical NetworkphysnetNamespace Selectornetwork/machine=Namespacesinferreddemo-mirror",
  "Relationships": "machinenetLocalnet ClusterUserDefinedNetworkOverviewRelationshipsConfigUpstreamphysnet · physical-network-name (reference)Downstreammachinenet · attached-namespaces (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for machinenet (NAD) 1`] = `
{
  "Overview": "machinenetNetworkAttachmentDefinitionOverviewRelationshipsConfigTypeNetworkAttachmentDefinitionNamespacesinferreddemo-mirrorNetworkAttachmentDefinitionsNo matching NetworkAttachmentDefinition found.",
  "Relationships": "machinenetNetworkAttachmentDefinitionOverviewRelationshipsConfigUpstreammachinenet · attached-namespaces (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for physnet (OVN Bridge Mapping) 1`] = `
{
  "Overview": "physnetOVN Bridge MappingOverviewRelationshipsConfigTypeOVN Bridge MappingBridgebr-exReferenced by CUDNsmachinenet",
  "Relationships": "physnetOVN Bridge MappingOverviewRelationshipsConfigUpstreambr-ex · bridge-mapping (reference)Downstreammachinenet · physical-network-name (reference)",
}
`;

exports[`NodeVisualization rendered structure primary-cudn-vrf, all lanes revealed 1`] = `
{
  "edges": [
    "1080,180 -> 700,180  solid  controller",
    "1080,280 -> 700,280  solid  controller",
    "1300,180 -> 1360,180  dashed  physical-network-name",
    "1300,280 -> 1360,280  dashed  physical-network-name",
    "1300,280 -> 1360,380  dashed  physical-network-name",
    "1300,420 -> 1360,480  dashed  primary-network (subnet, name)",
    "1520,180 -> 1580,179  solid  attached-namespaces",
    "1520,280 -> 1580,281  solid  attached-namespaces",
    "1520,480 -> 1580,479  solid  attached-namespaces",
    "200,180 -> 700,180  solid  controller",
    "200,280 -> 480,280  solid  base-iface",
    "860,420 -> 1140,420  solid  management-port (ovn-k8s-mp3)",
    "arc M 200 280 Q 450 156 700 280  solid  controller",
    "arc M 860 180 Q 1000 80 1140 180  dashed  bridge-mapping",
    "arc M 860 180 Q 905 300 860 420  solid  patch-peer",
    "arc M 860 280 Q 1000 180 1140 280  dashed  bridge-mapping",
  ],
  "laneHeaders": [
    "Physical Interfaces",
    "Bonds",
    "VLAN Interfaces",
    "Bridges",
    "Integration",
    "Logical Interfaces",
    "Bridge Mappings",
    "VRFs",
    "Networks",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "0cb0de1976d0c71",
        "veth",
        "up",
      ],
      "title": "0cb0de1976d0c71 (veth)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 1140,
      "y": 140,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet-vmdata",
        "OVN Bridge Mapping",
        "Bridge: br-vmdata",
      ],
      "title": "physnet-vmdata (OVN Bridge Mapping)",
      "x": 1140,
      "y": 240,
    },
    {
      "fill": "#CC6600",
      "labels": [
        "example-p-cudn",
        "VRF",
        "ovn-k8s-mp3 Tbl 5775",
      ],
      "title": "example-p-cudn (VRF)",
      "x": 1140,
      "y": 380,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "machinenet",
        "CUDN",
        "Localnet",
      ],
      "title": "machinenet (CUDN)",
      "x": 1360,
      "y": 140,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1924",
        "CUDN",
        "Localnet VLAN 1924",
      ],
      "title": "vlan-1924 (CUDN)",
      "x": 1360,
      "y": 240,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1926",
        "CUDN",
        "Localnet VLAN 1926",
      ],
      "title": "vlan-1926 (CUDN)",
      "x": 1360,
      "y": 340,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "example-p-cudn",
        "CUDN",
        "Layer2 10.1.2.0/24",
      ],
      "title": "example-p-cudn (CUDN)",
      "x": 1360,
      "y": 440,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "machinenet",
        "NAD",
      ],
      "title": "machinenet (NAD)",
      "x": 1580,
      "y": 139,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "vlan-1924",
        "NAD",
      ],
      "title": "vlan-1924 (NAD)",
      "x": 1580,
      "y": 241,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "example-p-cudn",
        "NAD",
      ],
      "title": "example-p-cudn (NAD)",
      "x": 1580,
      "y": 439,
    },
    {
      "fill": "#666",
      "labels": [
        "genev_sys_6081",
        "unknown",
        "ignore",
      ],
      "title": "genev_sys_6081 (unknown)",
      "x": 180,
      "y": 0,
    },
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 360,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens192",
        "ethernet",
        "up",
      ],
      "title": "ens192 (ethernet)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens224",
        "ethernet",
        "up",
      ],
      "title": "ens224 (ethernet)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens256",
        "ethernet",
        "down",
      ],
      "title": "ens256 (ethernet)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens161",
        "ethernet",
        "down",
      ],
      "title": "ens161 (ethernet)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#9933CC",
      "labels": [
        "ens224.456",
        "vlan",
        "up",
      ],
      "title": "ens224.456 (vlan)",
      "x": 480,
      "y": 240,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 700,
      "y": 140,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-vmdata",
        "ovs-bridge",
        "up",
      ],
      "title": "br-vmdata (ovs-bridge)",
      "x": 700,
      "y": 240,
    },
    {
      "fill": "#009596",
      "labels": [
        "br-int",
        "OVN Integration",
        "5 ports",
      ],
      "title": "br-int (OVN Integration)",
      "x": 700,
      "y": 380,
    },
    {
      "fill": "#0099CC",
      "labels": [
        "br-ex",
        "ovs-interface",
        "up",
      ],
      "title": "br-ex (ovs-interface)",
      "x": 920,
      "y": 140,
    },
    {
      "fill": "#0099CC",
      "labels": [
        "ovs-vlan-1920",
        "ovs-interface",
        "up",
      ],
      "title": "ovs-vlan-1920 (ovs-interface)",
      "x": 920,
      "y": 240,
    },
  ],
}
`;

exports[`NodeVisualization rendered structure primary-cudn-vrf, default view 1`] = `
{
  "edges": [
    "1080,180 -> 1140,179  solid  attached-namespaces",
    "1080,280 -> 1140,281  solid  attached-namespaces",
    "1080,480 -> 1140,479  solid  attached-namespaces",
    "200,180 -> 480,180  solid  controller",
    "200,280 -> 260,280  solid  base-iface",
    "640,180 -> 700,180  dashed  bridge-mapping",
    "640,280 -> 700,280  dashed  bridge-mapping",
    "640,420 -> 700,420  solid  management-port (ovn-k8s-mp3)",
    "860,180 -> 920,180  dashed  physical-network-name",
    "860,280 -> 920,280  dashed  physical-network-name",
    "860,280 -> 920,380  dashed  physical-network-name",
    "860,420 -> 920,480  dashed  primary-network (subnet, name)",
    "arc M 200 280 Q 340 180 480 280  solid  controller",
    "arc M 640 180 Q 685 300 640 420  solid  patch-peer",
  ],
  "laneHeaders": [
    "Physical Interfaces",
    "VLAN Interfaces",
    "Bridges",
    "Integration",
    "Bridge Mappings",
    "VRFs",
    "Networks",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "0cb0de1976d0c71",
        "veth",
        "up",
      ],
      "title": "0cb0de1976d0c71 (veth)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "machinenet",
        "NAD",
      ],
      "title": "machinenet (NAD)",
      "x": 1140,
      "y": 139,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "vlan-1924",
        "NAD",
      ],
      "title": "vlan-1924 (NAD)",
      "x": 1140,
      "y": 241,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "example-p-cudn",
        "NAD",
      ],
      "title": "example-p-cudn (NAD)",
      "x": 1140,
      "y": 439,
    },
    {
      "fill": "#666",
      "labels": [
        "genev_sys_6081",
        "unknown",
        "ignore",
      ],
      "title": "genev_sys_6081 (unknown)",
      "x": 180,
      "y": 0,
    },
    {
      "fill": "#9933CC",
      "labels": [
        "ens224.456",
        "vlan",
        "up",
      ],
      "title": "ens224.456 (vlan)",
      "x": 260,
      "y": 240,
    },
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 360,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens192",
        "ethernet",
        "up",
      ],
      "title": "ens192 (ethernet)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens224",
        "ethernet",
        "up",
      ],
      "title": "ens224 (ethernet)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens256",
        "ethernet",
        "down",
      ],
      "title": "ens256 (ethernet)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens161",
        "ethernet",
        "down",
      ],
      "title": "ens161 (ethernet)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 480,
      "y": 140,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-vmdata",
        "ovs-bridge",
        "up",
      ],
      "title": "br-vmdata (ovs-bridge)",
      "x": 480,
      "y": 240,
    },
    {
      "fill": "#009596",
      "labels": [
        "br-int",
        "OVN Integration",
        "5 ports",
      ],
      "title": "br-int (OVN Integration)",
      "x": 480,
      "y": 380,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 700,
      "y": 140,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet-vmdata",
        "OVN Bridge Mapping",
        "Bridge: br-vmdata",
      ],
      "title": "physnet-vmdata (OVN Bridge Mapping)",
      "x": 700,
      "y": 240,
    },
    {
      "fill": "#CC6600",
      "labels": [
        "example-p-cudn",
        "VRF",
        "ovn-k8s-mp3 Tbl 5775",
      ],
      "title": "example-p-cudn (VRF)",
      "x": 700,
      "y": 380,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "machinenet",
        "CUDN",
        "Localnet",
      ],
      "title": "machinenet (CUDN)",
      "x": 920,
      "y": 140,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1924",
        "CUDN",
        "Localnet VLAN 1924",
      ],
      "title": "vlan-1924 (CUDN)",
      "x": 920,
      "y": 240,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1926",
        "CUDN",
        "Localnet VLAN 1926",
      ],
      "title": "vlan-1926 (CUDN)",
      "x": 920,
      "y": 340,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "example-p-cudn",
        "CUDN",
        "Layer2 10.1.2.0/24",
      ],
      "title": "example-p-cudn (CUDN)",
      "x": 920,
      "y": 440,
    },
  ],
}
`;
